# RF62X-SDK

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
Examples/C/RF62X_SMART/RF62X_search/src/: CMakeLists.txt
Examples/C/RF62X_SMART/SEARCH_EXAMPLE/: CMakeLists.txt
Examples/C/RF62X_SMART/SEARCH_EXAMPLE/src/: CMakeLists.txt  main.c
Examples/Cpp/RF62X_SMART/: CMakeLists.txt
Examples/Cpp/RF62X_SMART/CUSTOM_COMMAND_EXAMPLE/: CMakeLists.txt
Examples/Cpp/RF62X_SMART/CUSTOM_COMMAND_EXAMPLE/src/: CMakeLists.txt  main.cpp
Examples/Cpp/RF62X_SMART/DUMP_EXAMPLE/: CMakeLists.txt
Examples/Cpp/RF62X_SMART/DUMP_EXAMPLE/src/: CMakeLists.txt  main.cpp
Examples/Cpp/RF62X_SMART/FIRMWARE_EXAMPLE/: CMakeLists.txt
Examples/Cpp/RF62X_SMART/FIRMWARE_EXAMPLE/src/: CMakeLists.txt  main.cpp
Examples/Cpp/RF62X_SMART/FRAME_EXAMPLE/src/: CMakeLists.txt  main.cpp
Examples/Cpp/RF62X_SMART/LaserTest/: CMakeLists.txt
Examples/Cpp/RF62X_SMART/LaserTest/src/: CMakeLists.txt  main.cpp
Examples/Cpp/RF62X_SMART/MULTITHREAD_EXAMPLE/: CMakeLists.txt
Examples/Cpp/RF62X_SMART/MULTITHREAD_EXAMPLE/src/: CMakeLists.txt  main.cpp
Examples/Cpp/RF62X_SMART/PARAMETER_EXAMPLE/src/: CMakeLists.txt  main.cpp
Examples/Cpp/RF62X_SMART/PERIPHERY_EXAMPLE/: CMakeLists.txt
Examples/Cpp/RF62X_SMART/PERIPHERY_EXAMPLE/src/: CMakeLists.txt  main.cpp
Examples/Cpp/RF62X_SMART/PROFILE_EXAMPLE/src/: CMakeLists.txt  main.cpp
Examples/Cpp/RF62X_SMART/SEARCH_EXAMPLE/src/: CMakeLists.txt  main.cpp
RF62X-Wrappers/C/: CMakeLists.txt
RF62X-Wrappers/C/src/: CMakeLists.txt  network.c  network.h  rf62Xcore.c  rf62Xcore.h
RF62X-Wrappers/Cpp/: CMakeLists.txt
RF62X-Wrappers/Cpp/src/: CMakeLists.txt  network.cpp  rf62Xcore.cpp  rf62Xsdk.cpp  rf62Xsdk.h  rf62Xtypes.h  rf62Xversion.h  rf62Xversion.h.in
docs/: CMakeLists.txt  make.bat  requirements.txt
docs/source/: overview.rst  rf62X_core.rst  rf62X_wrappers.rst
docs/source/_build/html/: README.html  discovery.html  genindex.html  index.html  objects.inv  rf62X_core.html  search.html
docs/source/_build/html/.doctrees/: environment.pickle  getting_started.doctree  index.doctree  rf62X_core.doctree
docs/source/_build/html/_sources/: getting_started.rst.txt
docs/source/locale/ru/LC_MESSAGES/: index.mo
docs/source_en/: index.rst  rf62X_wrappers.rst
docs/source_en/_build/html/: .buildinfo  OVERVIEW.html  explicit_messaging.html  getting_started.html  rf62X_core.html  rf62X_wrappers - Copy.html  rf62X_wrappers.html  searchindex.js
docs/source_en/_build/html/.doctrees/: OVERVIEW.doctree  README.doctree  environment.pickle  implicit_messaging.doctree  (+1 more)
docs/source_ru/: Doxyfile  Doxyfile.in  conf.py  index.rst  overview.rst
docs/source_ru/_build/html/: .buildinfo  OVERVIEW.html  genindex.html  implicit_messaging.html  index.html  objects.inv  rf62X_core.html  rf62X_wrappers.html  search.html  searchindex.js
docs/source_ru/api_description/: rf62Xcore.rst
docs/source_ru/api_description/rf62Xsdk_c/: rf627old.rst
docs/source_ru/api_description/rf62Xsdk_cpp/: _index.rst  rf627old.rst
docs/source_ru/api_description/rf62Xsdk_csharp/: _index.rst  init_sdk.rst  rf627old.rst  rf62Xsdk_csharp.rst
docs/source_ru/api_description/rf62Xsdk_labview/: init_sdk.rst  rf627old.rst  rf62Xsdk_labview.rst
docs/source_ru/api_description/rf62Xsdk_matlab/: rf627old.rst
docs/source_ru/api_description/rf62Xsdk_python/: init_sdk.rst  rf627_Error.rst  rf627old.rst  rf62Xsdk_python.rst
docs/source_ru/getting_started/: _index.rst  compatibility.rst  install_and_setup.rst  loading_sdk.rst
docs/source_ru/sdk_compilation/: _index.rst  rf62Xcore.rst
docs/source_ru/sdk_compilation/wrappers/: rf62Xsdk_cpp.rst  rf62Xsdk_csharp.rst
docs/source_ru/tutorial/: rf62Xsdk_cpp.rst  rf62Xsdk_csharp.rst  rf62Xsdk_labview.rst  rf62Xsdk_matlab.rst  rf62Xsdk_python.rst  udp_port.rst
examples/C/RF627_old/RF627_search/: CMakeLists.txt  rf627_search.c
examples/Cpp/RF627_TESTS/: CMakeLists.txt
examples/Cpp/RF627_TESTS/RF627_params/: CMakeLists.txt  rf627_params.cpp
examples/Cpp/RF627_TESTS/RF627_profile/: rf627_profile.cpp
examples/Cpp/RF627_TESTS/RF627_search/: rf627_search.cpp
examples/Cpp/RF627_smart/RF627_params/: CMakeLists.txt  rf627_params.cpp
examples/Cpp/RF62X_SMART/FRAME_EXAMPLE/: CMakeLists.txt
examples1/Cpp/: CMakeLists.txt
examples1/Cpp/RF627_OLD1/RF627_params/: rf627_params.cpp
examples1/Cpp/RF627_OLD1/RF627_search/: CMakeLists.txt
examples1/Cpp/RF62X_SMART/: CMakeLists.txt
examples1/Cpp/RF62X_SMART/PARAMETER_EXAMPLE/: CMakeLists.txt
rf627core/: CMakeLists.txt
rf627core/src/: rf627_config.h  rf627_core.c  rf627_core.h  rf627_devices.h  rf627_old.c  rf627_sdk.c  rf627_sdk.h  rf627_smart.c  rf627_types.h
rf62Xcore/: CMakeLists.txt
rf62Xcore/src/: CMakeLists.txt  rf627_old.c  rf627_smart.c  rf62X_core.c  rf62X_core.h  rf62X_devices.h  rf62X_sdk.c  rf62X_sdk.h  rf62X_types.h
rf62Xwrappers/C/rf62Xsdk/: CMakeLists.txt
rf62Xwrappers/C/rf62Xsdk/src/: CMakeLists.txt  network.c  network.cpp  network.h  rf62Xcore.c  rf62Xcore.cpp  rf62Xcore.h
rf62Xwrappers/Cpp/rf62Xsdk/: CMakeLists.txt
rf62Xwrappers/Cpp/rf62Xsdk/src/: CMakeLists.txt  rf62Xcore.cpp  rf62Xcore.h  rf62Xsdk.cpp  rf62Xsdk.h  rf62Xtypes.h
samples/Cpp/RF627_TESTS/: CMakeLists.txt
samples/Cpp/RF627_TESTS/RF627_params/: rf627_params.cpp
samples/Cpp/RF627_TESTS/RF627_profile/: CMakeLists.txt  rf627_profile.cpp
samples/Cpp/RF627_TESTS/RF627_search/: CMakeLists.txt  rf627_search.cpp
samples/win64/CMake/RF627_params/: CMakeLists.txt  main.cpp  rf627_params.cpp
samples/win64/CMake/RF627_profile/: CMakeLists.txt  main.cpp  rf627_profile.cpp
samples/win64/CMake/RF627_search/: CMakeLists.txt  main.cpp  rf627_search.cpp
samples/win64/CMake/rf627_search_test/: CMakeLists.txt  main.cpp  network.cpp
tests/Cpp/: CMakeLists.txt
tests/Cpp/rf62Xsdk_tst/: CMakeLists.txt  connect_test.cpp  init_test.cpp  profile_test.cpp  search_test.cpp  test.cpp
wrappers/cpp/CMake/rf627sdk/: CMakeLists.txt  network.cpp  rf627core.cpp  rf627sdk.cpp  rf627sdk.h  rf627types.h
(+457 files in other folders)
